// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / Accordion Default 1`] = `
Array [
  .c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  color: #336BFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c0 {
  outline: 1px none;
  background-color: transparent;
  padding: 0px 0px 0px 0px;
}

.c0.c0 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c2 {
  font: inherit;
  width: 100%;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background-color: transparent;
  padding: 12px 0;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c6 {
  margin-top: -2px;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  padding-right: 12px;
}

.c6 svg {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
}

<div
    aria-expanded={false}
    className="c0"
  >
    <h3
      className="Typography__Span-sc-10mju41-0 c1"
    >
      <button
        className="c2"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      >
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            <span
              className="Typography__Span-sc-10mju41-0 c1"
            >
              Låg CO₂ risk
            </span>
            <span
              className="Typography__Span-sc-10mju41-0 c5"
            />
          </div>
        </div>
        <div
          className="c6"
        >
          <svg
            aria-hidden="true"
            className="c7"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={16}
          >
            <path
              d="M7 9v7h2V9h7V7H9V0H7v7H0v2h7z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
    </h3>
  </div>,
  .c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  color: #336BFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c0 {
  outline: 1px none;
  background-color: transparent;
  padding: 0px 0px 0px 0px;
}

.c0.c0 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c2 {
  font: inherit;
  width: 100%;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background-color: transparent;
  padding: 12px 0;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c6 {
  margin-top: -2px;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  padding-right: 12px;
}

.c6 svg {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
}

<div
    aria-expanded={false}
    className="c0"
  >
    <h3
      className="Typography__Span-sc-10mju41-0 c1"
    >
      <button
        className="c2"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      >
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            <span
              className="Typography__Span-sc-10mju41-0 c1"
            >
              Sustainability score
            </span>
            <span
              className="Typography__Span-sc-10mju41-0 c5"
            />
          </div>
        </div>
        <div
          className="c6"
        >
          <svg
            aria-hidden="true"
            className="c7"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={16}
          >
            <path
              d="M7 9v7h2V9h7V7H9V0H7v7H0v2h7z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
    </h3>
  </div>,
]
`;

exports[`Storyshots Molecules / Accordion With Footer 1`] = `
Array [
  .c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  color: #336BFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c0 {
  outline: 1px none;
  background-color: transparent;
  padding: 0px 0px 0px 0px;
}

.c0.c0 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c2 {
  font: inherit;
  width: 100%;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background-color: transparent;
  padding: 12px 0;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c6 {
  margin-top: -2px;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  padding-right: 12px;
}

.c6 svg {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
}

<div
    aria-expanded={false}
    className="c0"
  >
    <h3
      className="Typography__Span-sc-10mju41-0 c1"
    >
      <button
        className="c2"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      >
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            <span
              className="Typography__Span-sc-10mju41-0 c1"
            >
              Låg CO₂ risk
            </span>
            <span
              className="Typography__Span-sc-10mju41-0 c5"
            />
          </div>
        </div>
        <div
          className="c6"
        >
          <svg
            aria-hidden="true"
            className="c7"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={16}
          >
            <path
              d="M7 9v7h2V9h7V7H9V0H7v7H0v2h7z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
    </h3>
  </div>,
  .c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  color: #336BFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c0 {
  outline: 1px none;
  background-color: transparent;
  padding: 0px 0px 0px 0px;
}

.c0.c0 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c2 {
  font: inherit;
  width: 100%;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background-color: transparent;
  padding: 12px 0;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c6 {
  margin-top: -2px;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  padding-right: 12px;
}

.c6 svg {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
}

<div
    aria-expanded={false}
    className="c0"
  >
    <h3
      className="Typography__Span-sc-10mju41-0 c1"
    >
      <button
        className="c2"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      >
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            <span
              className="Typography__Span-sc-10mju41-0 c1"
            >
              Sustainability score
            </span>
            <span
              className="Typography__Span-sc-10mju41-0 c5"
            />
          </div>
        </div>
        <div
          className="c6"
        >
          <svg
            aria-hidden="true"
            className="c7"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={16}
          >
            <path
              d="M7 9v7h2V9h7V7H9V0H7v7H0v2h7z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
    </h3>
  </div>,
  .c0 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

<div
    className="c0"
  />,
  .c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  padding-top: 12px;
}

<div
    className="c0"
  >
    <p
      className="Typography__Span-sc-10mju41-0 c1"
    >
      Did not find what you look for? ...That's a shame. 
    </p>
  </div>,
]
`;
